Add prefab values for LinkedHashSet
EqualsVerifier could not instantiate LinkedHashSet fields without
opening java.util or supplying withPrefabValues. Provide the same
builtin collection values already used for HashSet and LinkedHashMap.

Fixes #1231